--- a/config.yml
+++ b/config.yml
@@ -1,17 +1,19 @@
 #本插件需要papi,请先在服务器内输入/papi ecloud download Server和/papi ecloud download Player
-message-reload: ' 插件重载成功'
-message-upload: ' 祝福上传成功，你获得了一个钻石！'
-message-di: ' 第'
-message-is: '个人的祝福是：'
-message-error: ' 语法错误'
-message-list: ' 祝福列表'
-message-already: ' 你已经写过祝福了'
-message-no: '你没有权限这么做'
-message-notime: ' 现在不是祝福月'
-message-front: '[NewYearBlessing]'
+message-reload: '插件重载成功'
+message-upload: '祝福成功，你获得了一个钻石！'
+message-error: '你这语法有问题啊kora'
+message-list: '祝福列表'
+message-already: '你已经祝福过了哟'
+message-no: '这种事情是不可以做的啦'
+message-notime: '现在还没到时候捏'
+message-front: '【NewYearBlessing】'
 #以上是一些语言文件
-use-month: '1'
-#如果不需要的话可以填all
+start-year: 2022
+start-month: 1
+start-day: 31
+end-year: 2022
+end-month: 2
+end-day: 3
 reward: 'give %player_name% diamond'
 #玩家许愿成功后执行的指令，支持papi
 Blessing:
