--- a/pom.xml
+++ b/pom.xml
@@ -1,15 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xmlns="http://maven.apache.org/POM/4.0.0"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>NewyearBlessing</groupId>
-    <artifactId>NewyearBlessing</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <groupId>NewYearBlessing</groupId>
+    <artifactId>NewYearBlessing</artifactId>
+    <version>1.3.2</version>
     <packaging>jar</packaging>
 
-    <name>NewyearBlessing</name>
+    <name>NewYearBlessing</name>
 
     <properties>
         <java.version>1.8</java.version>
@@ -61,9 +61,9 @@
 
     <dependencies>
         <dependency>
-            <groupId>org.bukkit</groupId>
-            <artifactId>bukkit</artifactId>
-            <version>1.15.2-R0.1-SNAPSHOT</version>
+            <groupId>org.spigotmc</groupId>
+            <artifactId>spigot-api</artifactId>
+            <version>1.18.1-R0.1-SNAPSHOT</version>
             <scope>provided</scope>
         </dependency>
     </dependencies>
