--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,11 +1,13 @@
-name: NewyearBlessing
-version: 1.3.1
-main: newyearblessing.newyearblessing.NewyearBlessing
-api-version: 1.15
+name: NewYearBlessing
+version: 1.3.2
+main: moink.newyearblessing.NewYearBlessing
+api-version: 1.18
 commands:
-  nyb:
-    description: 主指令
+  newyearblessing:
+    aliases:
+      - "nyb"
+    description: "主指令"
 permissions:
-  newyearblessing.command.reload:
-    description: 重载插件的权限
+  nyb.commands.reload:
+    description: "重载插件的权限"
     default: op
